[project]
name = "danbooru-translator-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litserve>=0.2.7",
    "protobuf>=6.30.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
scripts.danbooru-tags-translator-web-app-backend = "server"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "ruff>=0.11.2",
]

[tool.setuptools]
py-modules = ["server"]
